# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.401 2011/03/29 15:38:28 blueness Exp $

*hardened-sources-2.6.32-r43 (29 Mar 2011)

  29 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r43.ebuild:
  Based on 2.6.32.36 + genpatches-2.6.32.36 +
  grsecurity-2.2.2-2.6.32.36-201103281752

*hardened-sources-2.6.37-r7 (22 Mar 2011)

  22 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.37-r7.ebuild:
  Based on vanilla 2.6.37.4 + genpatches-2.6.37.5 +
  grsecurity-2.2.1-2.6.37.4-201103211735

*hardened-sources-2.6.32-r42 (22 Mar 2011)

  22 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r42.ebuild:
  Based on vanilla 2.6.32.33 + genpatches-2.6.32.34 +
  grsecurity-2.2.1-2.6.32.33-201103211735

*hardened-sources-2.6.32-r41 (19 Mar 2011)

  19 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r41.ebuild:
  Based on vanilla 2.6.32.32 + genpatches-2.6.32.34 +
  grsecurity-2.2.1-2.6.32.32-201103122250

*hardened-sources-2.6.37-r6 (19 Mar 2011)

  19 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.37-r6.ebuild:
  Based on vanilla 2.6.37.3 + genpatches-2.6.37.4 +
  grsecurity-2.2.1-2.6.37.3-201103122250

*hardened-sources-2.6.37-r5 (07 Mar 2011)

  07 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.37-r5.ebuild:
  Based on vanilla 2.6.37.2 + genpatches-2.6.37.2 +
  grsecurity-2.2.1-2.6.37.2-201103021740

*hardened-sources-2.6.32-r40 (07 Mar 2011)

  07 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r40.ebuild:
  Based on vanilla 2.6.32.30 + genpatches-2.6.32-32 +
  grsecurity-2.2.1-2.6.32.30-201103021740

  04 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r39.ebuild, hardened-sources-2.6.37-r4.ebuild: